// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications Render <Notification/> with all props 1`] = `
<DocumentFragment>
  <div
    class="af-alert af-alert--notification af-alert--myclass"
    role="alert"
  >
    <div
      class="af-alert__title"
    >
      <div
        class="af-alert__title-icon"
      >
        <i
          class="glyphicon glyphicon-ok"
        />
      </div>
      <div
        class="af-alert__title-text"
      >
        title
      </div>
      <button
        class="af-alert__title-icon-close"
        type="button"
      >
        <i
          class="glyphicon glyphicon-close"
        />
      </button>
    </div>
    <div
      class="af-alert__content"
    >
      <div
        class="af-alert__content__left"
      />
      <div
        class="af-alert__content__right"
      >
        <p>
          detail custom
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Notifications Render <Notification/> with required props 1`] = `
<DocumentFragment>
  <div
    class="af-alert af-alert--notification"
    role="alert"
  >
    <div
      class="af-alert__title"
    >
      <div
        class="af-alert__title-icon"
      >
        <i
          class="glyphicon glyphicon-minus-sign"
        />
      </div>
      <div
        class="af-alert__title-text"
      >
        title
      </div>
      <button
        class="af-alert__title-icon-close"
        type="button"
      >
        <i
          class="glyphicon glyphicon-close"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
